--- a/AutoReyes/Site1.Master
+++ b/AutoReyes/Site1.Master
@@ -8,6 +8,11 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 
+    <%--toastr--%>
+    <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="/toastr.min.js"></script>
+    <link href="/toastr.min.css" rel="stylesheet" />
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
      
     <link href="css/Estilo.css" rel="stylesheet" />
     <!-- Latest compiled and minified CSS -->
@@ -18,6 +23,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 
 
     <style type="text/css">
