--- a/AutoReyes/Site1.Master
+++ b/AutoReyes/Site1.Master
@@ -43,6 +43,13 @@
   
 
 <asp:ContentPlaceHolder ID="Head" runat="server"></asp:ContentPlaceHolder>
+    <style type="text/css">
+        .auto-style2 {
+            position: absolute;
+            top: 0px;
+            left: 0px;
+        }
+    </style>
 </head>
 
 <body>
@@ -52,25 +59,31 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" name="dasdasdadssd" data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Inicio</a>
+                <a class="navbar-brand" href="/WebFrom/Default.aspx">Inicio</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Vehiculos</a>
+                        <a href="/Consultas/ConsultaVehiculos.aspx">Vehiculos</a>
                     </li>
                     <li>
                         <a href="#">Publica tu vehiculo</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
+                    </li>
+                </ul>
+                <ul class=" nav navbar-nav navbar-right">
+                    <li>
+                        
                     </li>
                 </ul>
             </div>
@@ -82,6 +95,9 @@
     <!-- Full Page Image Background Carousel Header -->
     <header id="myCarousel" class="carousel slide">
 
+    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+        
+    </asp:ContentPlaceHolder>
         <!-- Controls -->
         <a class="left carousel-control" href="#myCarousel" data-slide="prev">
             <span class="icon-prev"></span>
@@ -92,13 +108,10 @@
 
     </header>
 
+
+        
     <!-- Page Content -->
     <div class="container">
-
-    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-        
-    </asp:ContentPlaceHolder>
-        
         <div class="row">
             <div class="col-lg-12">
                 <h1>Full Slider by Start Bootstrap</h1>
