--- a/AutoReyes/Site1.Master
+++ b/AutoReyes/Site1.Master
@@ -59,8 +59,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/WebFrom/Default.aspx">Inicio</a><br />
-&nbsp;<br />
+                <a class="navbar-brand" href="/WebForm/Default.aspx">Inicio</a><br />
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -101,37 +100,6 @@
 
 
         
-    <!-- Page Content -->
-    <td>
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-               
-            </td>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1>Full Slider by Start Bootstrap</h1>
-
-                <p>The background images for the slider are set directly in the HTML using inline CSS. The rest of the styles for this template are contained within the <code>full-slider.css</code>file.</p>
-            </div>
-        </div>
-
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </footer>
-
-    </div>
 
     <!-- /.container -->
 
