--- a/AutoReyes/Site2.Master
+++ b/AutoReyes/Site2.Master
@@ -67,7 +67,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/WebForm/Default.aspx">Inicio</a>
+                <a class="navbar-brand" href="/WebForm/DefaultAdmin.aspx">Inicio</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -75,26 +75,42 @@
                     <li>
                         <a href="/Consultas/ConsultaVehiculos.aspx">Vehiculos</a>
                     </li>
-                    <li>
-                        <a href="#">Publica tu vehiculo</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Registros 
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/Registros/RegistroMarcas.aspx">Registro de marcas </a></li>
-                            <li><a href="/Registros/RegistroModelos.aspx">Registro de modelos </a></li>
-                            <li><a href="/Registros/RegistroMotores.aspx">Registro de motores</a></li>
-                            <li><a href="/Registros/RegistroTransmision.aspx">Registro de transmisiones</a></li>
-                            <li><a href="/Registros/RegistroColores.aspx">Registro de colores</a></li>
-                            <li><a href="/Registros/RegistroEstados.aspx">Registro de estados</a></li>
-                            <li class="divider"></li>
-                            <li><a href="/Registros/RegistroUsuario2.aspx">Registro de usuarios </a></li>
-                            <li><a href="/Registros/RegistroPaquetes.aspx">Registro de paquetes </a></li>
+                    <li role="presentation" class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Consultas 
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/Consultas/ConsultaMarcas.aspx">Consulta de marcas </a></li>
+                                <li><a href="/Consultas/ConsultaModelos.aspx">Consulta de modelos </a></li>
+                                <li><a href="/Consultas/ConsultaMotores.aspx">Consulta de motores</a></li>
+                                <li><a href="/Consultas/ConsultaTransmisiones.aspx">Consulta de transmisiones</a></li>
+                                <li><a href="/Consultas/ConsultaColores.aspx">Consulta de colores</a></li>
+                                <li><a href="/Consultas/ConsultaEstados.aspx">Consulta de estados</a></li>
+                                <li class="divider"></li>
+                                <li><a href="/Consultas/ConsultaUsuarios.aspx">Consulta de usuarios </a></li>
+                                <li><a href="/Consultas/ConsultaPaquetes.aspx">Consulta de paquetes </a></li>
                           
-                        </ul>
-                    </li>
+                            </ul>
+                        </li>
+                    
+
+                        <li role="presentation" class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Registros 
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/Registros/RegistroMarcas.aspx">Registro de marcas </a></li>
+                                <li><a href="/Registros/RegistroModelos.aspx">Registro de modelos </a></li>
+                                <li><a href="/Registros/RegistroMotores.aspx">Registro de motores</a></li>
+                                <li><a href="/Registros/RegistroTransminiones.aspx">Registro de transmisiones</a></li>
+                                <li><a href="/Registros/RegistroColores.aspx">Registro de colores</a></li>
+                                <li><a href="/Registros/RegistroEstados.aspx">Registro de estados</a></li>
+                                <li class="divider"></li>
+                                <li><a href="/Registros/RegistroUsuarios.aspx">Registro de usuarios </a></li>
+                                <li><a href="/Registros/RegistroPaquetes.aspx">Registro de paquetes </a></li>
+                          
+                            </ul>
+                        </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
