--- a/AutoReyes/Site1.Master
+++ b/AutoReyes/Site1.Master
@@ -73,13 +73,16 @@
                     <li>
                         <a href="/WebForm/ComprarPaquete.aspx">Compra tu paquete</a>
                     </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
                 </ul>
-                <ul class=" nav navbar-nav navbar-right">
-                    <li>
-                        
+                <ul class="nav navbar-nav navbar-right">
+                    <li role="presentation" class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Mi cuenta
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/WebForm/MiCuentaUsuario.aspx">Opciones</a></li>
+                            <li><a href="/WebForm/DefaultOut.aspx">Cerrar sesion</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
