--- a/AutoReyes/Site2.Master
+++ b/AutoReyes/Site2.Master
@@ -112,6 +112,18 @@
                             </ul>
                         </li>
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li role="presentation" class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Mi cuenta
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Opciones</a></li>
+                            <li><a href="/WebForm/DefaultOut.aspx">Cerrar sesion</a></li>
+                        </ul>
+                    </li>
+                </ul>
+               
             </div>
             <!-- /.navbar-collapse -->
         </div>
